--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -179,6 +179,8 @@
   $(document).ready(function (){
     const clubId = [[${clubId}]];
     const noticeId = [[${noticeId}]];
+    console.log(clubId);
+    console.log(noticeId);
 
     $.ajax({
       type:'GET',
