--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -36,6 +36,10 @@
       margin-left: 10%;
     }
 
+    .withUs {
+      cursor: pointer;
+    }
+
     .title {
       margin-left: 30px;
     }
@@ -245,7 +249,7 @@
 <div>
   <header>
     <div class="title">
-      <h2 class="withUs">withUs</h2>
+      <h2 class="withUs" onclick="location.href=host + '/'">withUs</h2>
     </div>
     <div class="title2">
       <i class="icon fa-solid fa-user" onclick="location.href=host + '/api/member/profilePage/' + memberId"></i>
