notice add 페이지 수정

--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -68,10 +68,10 @@
         <div class="col-sm-12">
             <h2>Notice</h2>
                 <div class="form-group">
-                    <select id="Category" onchange="selected()">
+                    <select id="Category">
 <!--                        <option value="Notice">공지 사항</option>-->
-                      <option value="zero" selected></option>
-                        <option value="Board">일반</option>
+<!--                      <option value="zero" selected></option>-->
+                        <option value="Board" selected>일반</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -90,15 +90,15 @@
 <script th:inline="javascript">
   /*<![CDATA[*/
 
-  let category;
+  // let category;
   const host = 'http://' + window.location.host;
 
-  function selected(){
-    category={}
-    const select = document.getElementById('Category');
-    let seleted = select.options[select.selectedIndex];
-    category = seleted.text;
-  }
+  // function selected(){
+  //   category={}
+  //   const select = document.getElementById('Category');
+  //   let seleted = select.options[select.selectedIndex];
+  //   category = seleted.text;
+  // }
 
 
 
@@ -109,6 +109,8 @@
 
   function sendNoticeRequest(){
     const clubId = [[${clubId}]];
+    let category = $("Category option:selected").text();
+
     let title = $('#title').val();
     let content = $('#content').val();
 
@@ -135,7 +137,7 @@
         window.location.href = host + "/api/club/main-club/" + clubId;
       },
       error: function (error){
-        console.error('에러 :',error)
+        alert("다시 작성해주세요");
       }
     })
 
