fix : 초대시 호스트인 클럽목록 출력

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -136,6 +136,10 @@
         chattingClicked();
       });
 
+      $("#inviting").on("click", function(e){
+        invitingClicked();
+      });
+
     })
 
 
@@ -178,6 +182,12 @@
     function updateProfile() {
       var memberId = /*[[${memberId}]]*/ '';
       let url = '/api/member/updateProfilePage/' + memberId;
+      location.href = url;
+    }
+
+    function invitingClicked(){
+      var memberId = /*[[${memberId}]]*/ '';
+      let url = '/api/member/myClub/'+memberId;
       location.href = url;
     }
 
