페이지 권한 문제 수정

--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -137,7 +137,7 @@
         window.location.href = host + "/api/club/main-club/" + clubId;
       },
       error: function (error){
-        alert("다시 작성해주세요");
+        alert("클럽멤버가 아닙니다");
       }
     })
 
