--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -229,7 +229,7 @@
             });
           },
           error:function (){
-            alert("로그인을 해주세요");
+            alert("해당 멤버가 아닙니다.");
           }
         })
 
@@ -245,7 +245,7 @@
 
       },
       error:function (){
-        alert("로그인을 해주세요");
+        alert("클럽 멤버가 아닙니다");
       }
     })
 
@@ -297,6 +297,7 @@
           }
         },
         error: function (error){
+          alert("호스트나 작성자가 아닙니다")
           console.error('에러 :',error);
         }
       })
@@ -328,6 +329,7 @@
         location.reload();
       },
       error: function (error){
+        alert("호스트나 작성자가 아닙니다")
         console.error('에러 :',error)
       }
     })
@@ -368,6 +370,7 @@
           }
         },
         error: function (error){
+          alert("호스트나 작성자가 아닙니다")
           console.error('에러 :',error);
         }
       })
@@ -451,6 +454,7 @@
         }
       },
       error: function (error){
+        alert("클럽 멤버가 아닙니다.")
         console.error('에러 :',error)
       }
     })
