--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -151,7 +151,8 @@
 
       },
       error: function (error){
-        console.error('에러 :',error)
+        alert("호스트나 작성자가 아닙니다")
+
       }
     })
 
