페이지 권한 문제 수정 2

--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -108,6 +108,10 @@
         let content = dto.content;
         $("#title").val(title);
         $("#content").val(content);
+      },
+      error: function (error){
+        alert("호스트나 작성자가 아닙니다")
+
       }
     })
   })
