fix : 카테고리 검색 결과 없을 시 생기던 에러 수정, 프로필 수정 에러페이지 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,6 +122,7 @@
       border: 1px solid black;
       font-weight: bold;
       border-radius: 20px;
+      cursor: pointer;
     }
 
     .image{
