--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -194,13 +194,12 @@
                                     let id = res.id;
                                     const card =
                                         '<div class="board-box" onclick="noticePage(\'' + id + '\')">' +
-                                        '    <p>' + title + '</p>' +
+                                        '    <div style="font-weight: bold; padding-bottom: 100px;">' + title + '</div>' +
                                         '</div>';
                                     $('#notice-box').append(card);
                                 });
                             }
                         });
-
                     }
                     // var clubList = window.location.pathname.split('club/').pop().replace()
                     const cntList = [[${countList}]];
