노티스 홈 버튼 추가

--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -103,7 +103,7 @@
 <div>
   <header>
     <div class="title">
-      <h2 class="withUs">withUs</h2>
+      <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
     </div>
     <div class="title2">
 <!--      <i class="icon fa-solid fa-user"-->
