--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -53,7 +53,7 @@
 <div>
   <header>
     <div class="title">
-      <h2 class="withUs">withUs</h2>
+      <h2 class="withUs" th:onclick="|location.href='@{/}'|" style="float: left; cursor: pointer; margin-top: 5px ">withUs</h2>
     </div>
     <div class="title2">
 <!--      <i class="icon fa-solid fa-user" onclick="location.href=host + '/api/member/profilePage/' + memberId"></i>-->
