fix : 검색 후 카테고리 변경 시 카테고리 적용, 메인페이지 css 변경, url로 다른 유저 프로필 수정 접근 방지, 에러 메세지 출력

--- a/src/main/resources/templates/auth/signupPage.html
+++ b/src/main/resources/templates/auth/signupPage.html
@@ -55,7 +55,8 @@
         }
       },
       error: function (error){
-        console.error('에러 :', error);
+        console.error('에러 :', error.responseJSON.msg);
+        alert(error.responseJSON.msg);
       }
     })
 
