--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -99,6 +99,10 @@
               $('#tag').append('#' + tag.trim()+'  ');
             });
           }
+        },
+        error: function (error){
+          console.error('에러 :', error.responseJSON.msg);
+          alert(error.responseJSON.msg);
         }
       });
 
