fix : 검색 후 카테고리 변경 시 카테고리 적용, 메인페이지 css 변경, url로 다른 유저 프로필 수정 접근 방지, 에러 메세지 출력

--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -178,6 +178,10 @@
             alert("초대되었습니다.")
           }
           window.location.href = '/api/member/profilePage/'+memberId;
+        },
+        error: function (error){
+          console.error('에러 :', error.responseJSON.msg);
+          alert(error.responseJSON.msg);
         }
       })
     }
