--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -133,6 +133,15 @@
     let content = $('#content').val();
     let category = $('#Category').val();
 
+    if(!title){
+      alert("제목을 입력해주세요");
+      return;
+    }
+    if(!content){
+      alert("내용을 입력해주세요");
+      return;
+    }
+
 
 
     $.ajax({
