fix : 클럽 목록 페이지네이션 수정, 내 클럽 목록조회 코드 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -393,7 +393,7 @@
             let cnt;
             const cntArray = [];
             if(response.data.length >= 4){
-              cnt = response.data.length/4 + 1;
+              cnt = response.data.length/4;
             } else{
               cnt = 1;
             }
@@ -478,7 +478,7 @@
             let cnt;
             let cntArray = [];
             if(response.data.length >= 4){
-              cnt = response.data.length/4 + 1;
+              cnt = response.data.length/4;
             } else{
               cnt = 1;
             }
@@ -615,7 +615,7 @@
             const cntArray = [];
             console.log(response.data.totalElements)
             if(response.data.totalElements > 4){
-              cnt = Math.floor(response.data.totalElements/4) + 1;
+              cnt = response.data.totalElements/4;
             } else{
               cnt = 1;
             }
