club member 초대, 글 scroll 기능 추가  및 메인화면 참가자 인원 표시

--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -261,6 +261,8 @@ p {
     border-radius: 15px;
     background-color: white;
     float: left;
+    overflow-y: auto;
+    white-space: pre-line;
 }
 .item2 {
     margin: 20px;
@@ -281,10 +283,16 @@ p {
 
 .invite-member {
     display: flex;
-    flex-wrap: wrap; /* 공간이 부족하면 항목을 다음 줄로 이동할 수 있도록 함 */
+    white-space: nowrap;
     justify-content: flex-start; /* 디자인 요구에 따라 조정하세요 */
+    max-height: 200px;
+    overflow-x: auto;
 }
-
+/*.club-introduce-box{*/
+/*    !*overflow-x: auto;*!*/
+/*    overflow-y: auto;*/
+/*    margin-bottom: 10px;*/
+/*}*/
 .memberDiv img {
     width: 30px;
     height: 30px;
