--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -134,13 +134,9 @@
                         <button id="search-image" class="search-btn" onclick="inviteMember()">
                             초대
                         </button>
-                        <h5>초대 목록</h5>
+                        <div>초대 목록</div>
                         <div id = "invite-container">
                             초대 이름:
-                        </div>
-                        <div>
-                            <label for="totalInviteesInput">Total Invitees:</label>
-                            <input type="number" id="totalInviteesInput" min="0" value="0">
                         </div>
                     </div>
                 </article>
