--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -232,4 +232,12 @@ body {
     background-color: cornflowerblue;
 }
 
-
+#invite-container{
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    margin:10px auto;
+    width: 300px;
+    height: 70px;
+    max-height: 200px; /* 최대 높이 설정 */
+    overflow-y: auto; /* 세로 스크롤바를 추가함으로써 내용이 넘칠 때 스크롤 가능하게 함 */
+}
