--- a/src/main/resources/static/css/clubrevise.css
+++ b/src/main/resources/static/css/clubrevise.css
@@ -193,6 +193,9 @@ body {
 .search-btn:hover{
     background-color: cornflowerblue;
 }
+
+
+
 /*초대상자*/
 #invite-container{
     background-color: #f0f0f0;
@@ -200,6 +203,8 @@ body {
     margin:10px auto;
     width: 300px;
     height: 70px;
+    max-height: 200px; /* 최대 높이 설정 */
+    overflow-y: auto; /* 세로 스크롤바를 추가함으로써 내용이 넘칠 때 스크롤 가능하게 함 */
 }
 
 /*club*/
