--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -270,9 +270,12 @@
             </div>
             <div class="item3">
                 <h4 class=invite>클럼 참가자</h4>
-                <div class=invite-member>
+                <div>
+                    <div class=invite-member>
 
+                    </div>
                 </div>
+
             </div>
         </section>
     </div>
