--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -145,7 +145,7 @@
                       + '                <div class="card-body">\n'
                       + '                  <p class="card-title">' + clubName + '</p>\n'
                       + '                  <p class="card-text">' + clubContent + '</p>\n'
-                      + '                  <p class="card-text">' + numberOfPeople + '</p>\n'
+                      + '                  <p class="card-text">참가자' + memberCount + '명</p>\n'
                       + '                </div>\n'
                       + '              </div>\n'
                       + '            </div>\n'
