fix : 삭제된 클럽 조회 개선, url 수정

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -188,7 +188,7 @@
 
     function invitingClicked(){
       var memberId = /*[[${memberId}]]*/ '';
-      let url = '/api/member/myClub/'+memberId;
+      let url = '/api/member/myHostingClubPage/'+memberId;
       location.href = url;
     }
 
