--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -62,7 +62,7 @@
             });
 
             $("#chatting").on("click", function(e) {
-                window.location.href = host + '/api/chat/chatRoomList/' + memberId;
+                window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
             });
 
             $("#myInfo").on("click", function(e) {
