--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -20,7 +20,7 @@
             console.log(memberId);
 
             $("#chatting").on("click", function(e) {
-                window.location.href = host + '/api/chat/chatRoomList/' + memberId;
+                window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
             });
 
             $("#myInfo").on("click", function(e) {
