--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -106,7 +106,7 @@
       });
 
       $("#chatting").on("click", function(e) {
-        window.location.href = host + '/api/chat/chatRoomList/' + memberId;
+        window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
       });
 
       $("#logout").on("click", function(e) {
@@ -150,27 +150,17 @@
       // 채팅방 생성 or 기존 roomId 가져오기
       $.ajax({
         type: 'POST',
-        url: '/api/chat/' + memberId,
+        url: '/api/chat/member/' + memberId,
         contentType: 'application/json',
       })
       .done(function (res) {
         console.log(res);
-        if (res && res.data && res.data) {
+        if (res && res.data) {
           var roomId = res.data;
         }
         console.log(roomId);
-        // 채팅방으로 이동
-        $.ajax({
-          type: 'GET',
-          url: '/api/chat/chatRoom/' + roomId,
-          contentType: 'application/json',
-        })
-        .done(function (res, status, xhr) {
-          window.location.href = host + '/api/chat/chatRoom/' + roomId;
-        })
-        .fail(function (xhr, status, error) {
-            console.error('채팅방 요청 API 에러', error);
-        })
+          window.location.href = host + '/api/chat/chatRoom/' + roomId + '/chatRoomPage';
+
       })
       .fail(function (xhr, status, error) {
         // 실패한 경우의 동작
